--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -7,9 +7,9 @@
 			{% endblock %}
 		</title>
 		{# Run `composer require symfony/webpack-encore-bundle`
-								           and uncomment the following Encore helpers to start using Symfony UX #}
+																						           and uncomment the following Encore helpers to start using Symfony UX #}
 
-		<link rel="stylesheet" href="https://bootswatch.com/5/quartz/bootstrap.min.css">
+		<link rel="stylesheet" href="https://bootswatch.com/5/cerulean/bootstrap.min.css">
 		{% block stylesheets %}
 			{#{{ encore_entry_link_tags('app') }}#}
 		{% endblock %}
