--- a/templates/task/index.html.twig
+++ b/templates/task/index.html.twig
@@ -1,20 +1,31 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Hello TaskController!{% endblock %}
+{% block title %}Liste des tâches
+{% endblock %}
 
 {% block body %}
-<style>
-    .example-wrapper { margin: 1em auto; max-width: 800px; width: 95%; font: 18px/1.5 sans-serif; }
-    .example-wrapper code { background: #F5F5F5; padding: 2px 6px; }
-</style>
 
-<div class="example-wrapper">
-    <h1>Hello {{ controller_name }}! ✅</h1>
+	<div class="container">
+		<table class="table table-striped tabled-bordered" id="tasksTable">
+			<thead>
+				<th>ID</th>
+				<th>Nom</th>
+				<th>Description</th>
+				<th>Date effective</th>
+			</thead>
+			<tbody>
+				{% if tasks is defined %}
+					{% for task in tasks %}
+						<tr>
+							<th scope="row">{{ task.id }}</th>
+							<td>{{ task.name }}</td>
+							<td>{{ task.description }}</td>
+							<td>{{ task.dueAt | date('d/m/y H:i:s') }}</td>
+						</tr>
+					{% endfor %}
+				{% endif %}
+			</tbody>
+		</table>
+	</div>
 
-    This friendly message is coming from:
-    <ul>
-        <li>Your controller at <code><a href="{{ 'C:/Users/21041624/Desktop/TodoAPP/src/Controller/TaskController.php'|file_link(0) }}">src/Controller/TaskController.php</a></code></li>
-        <li>Your template at <code><a href="{{ 'C:/Users/21041624/Desktop/TodoAPP/templates/task/index.html.twig'|file_link(0) }}">templates/task/index.html.twig</a></code></li>
-    </ul>
-</div>
 {% endblock %}
