--- a/templates/task/index.html.twig
+++ b/templates/task/index.html.twig
@@ -3,6 +3,11 @@
 {% block title %}Liste des tâches
 {% endblock %}
 
+{% block stylesheets %}
+	<link rel="stylesheet" href="https://cdn.datatables.net/1.11.3/css/jquery.dataTables.min.css">
+	<link href="{{ asset('assets/css/styles.css') }}" rel="stylesheet"/>
+{% endblock %}
+
 {% block body %}
 
 	<div class="container">
@@ -27,5 +32,19 @@
 			</tbody>
 		</table>
 	</div>
+
+{% endblock %}
+
+{% block javascripts %}
+
+	<script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
+	<script src="https://cdn.datatables.net/1.11.3/js/jquery.dataTables.min.js"></script>
+
+	<script>
+		$(document).ready(function () {
+$('#tasksTable').DataTable();
+});
+	</script>
+
 
 {% endblock %}
