--- a/templates/task/index.html.twig
+++ b/templates/task/index.html.twig
@@ -11,6 +11,7 @@
 {% block body %}
 
 	<div class="container">
+		<a href="{{ path('task_create') }}" class="btn btn-primary">Ajouter</a>
 		<table class="table table-striped tabled-bordered" id="tasksTable">
 			<thead>
 				<th>ID</th>
@@ -18,6 +19,8 @@
 				<th>Description</th>
 				<th>Date effective</th>
 				<th>Catégorie</th>
+				<th></th>
+				<th></th>
 			</thead>
 			<tbody>
 				{% if tasks is defined %}
@@ -28,6 +31,12 @@
 							<td>{{ task.description }}</td>
 							<td>{{ task.dueAt | date('d/m/y H:i:s') }}</td>
 							<td>{{ task.tag.name }}</td>
+							<td>
+								<a href="{{ path('task_update',{"id": task.id}) }}" class="btn btn-success">Modifier</a>
+							</td>
+							<td>
+								<a href="{{ path('task_delete',{"id": task.id}) }}" class="btn btn-danger">Supprimer</a>
+							</td>
 						</tr>
 					{% endfor %}
 				{% endif %}
