Création de la sécurité

--- a/templates/task/index.html.twig
+++ b/templates/task/index.html.twig
@@ -19,8 +19,8 @@
 				<th>Description</th>
 				<th>Date effective</th>
 				<th>Catégorie</th>
-				<th></th>
-				<th></th>
+				<th>Modifier</th>
+				<th>Supprimer</th>
 			</thead>
 			<tbody>
 				{% if tasks is defined %}
