fix : correction du template du mail

--- a/templates/emails/alert.html.twig
+++ b/templates/emails/alert.html.twig
@@ -1,4 +1,6 @@
-{{# templates/emails/alert.html.twig #}}
+{# templates/emails/alert.html.twig #}
+<!DOCTYPE html>
+<html>
 	<h1>ATTENTION!!</h1>
 
 	<h1>Votre tâche
@@ -32,3 +34,4 @@
 		</code>
 	</p>
 	<p>Votre AppToDo adorée</p>
+</html>
