--- a/templates/emails/alert.html.twig
+++ b/templates/emails/alert.html.twig
@@ -6,8 +6,12 @@
 		<meta charset="utf-8">
 	</head>
 	<body style="text-align : center;">
-		<h1>ATTENTION!!</h1>
-		<h1>Votre tâche LOL arrive à échéance le AUJOURD'HUI</h1>
+		<h1>ATTENTION!!
+			{{username}}</h1>
+		<h1>Votre tâche
+			{{task}}
+			arrive à échéance le
+			{{dueAt}}</h1>
 		<div class="container">
 			<table class="table table-striped tabled-bordered" id="tasksTable">
 				<caption>Le résumé de votre tâche</caption>
@@ -21,10 +25,10 @@
 				</thead>
 				<tbody>
 					<tr>
-						<td>LOL</td>
-						<td>Ceci est un LOL</td>
-						<td>Aujourd'hui</td>
-						<td>Catégorie</td>
+						<td>{{task}}</td>
+						<td>{{descritpion}}</td>
+						<td>{{dueAt}}</td>
+						<td>{{category}}</td>
 					</tr>
 				</tbody>
 			</table>
