feat : message personnalisé

--- a/templates/emails/alert.html.twig
+++ b/templates/emails/alert.html.twig
@@ -10,7 +10,7 @@
 			{{username}}</h1>
 		<h1>Votre tâche
 			{{task.name}}
-			arrive à échéance le
+			{{msg}}
 			{{task.dueAt|date("d/m/y")}}</h1>
 		<div class="container">
 			<table class="table table-striped tabled-bordered" id="tasksTable">
