--- a/templates/task/index.html.twig
+++ b/templates/task/index.html.twig
@@ -11,16 +11,16 @@
 {% block body %}
 
 	<div class="container">
-		<a href="{{ path('task_create') }}" class="btn btn-primary">Ajouter</a>
+		<a href="{{ path('task_create') }}" class="btn btn-primary">{{'general.button.add'| trans}}</a>
 		<table class="table table-striped tabled-bordered" id="tasksTable">
 			<thead>
 				<th>ID</th>
-				<th>Nom</th>
-				<th>Description</th>
-				<th>Date effective</th>
-				<th>Catégorie</th>
-				<th>Modifier</th>
-				<th>Supprimer</th>
+				<th>{{'general.name' | trans }}</th>
+				<th>{% trans from 'messages' %}general.description{% endtrans %}</th>
+				<th>{% trans from 'messages' %}general.due_date{% endtrans %}</th>
+				<th>{% trans from 'messages' %}general.category{% endtrans %}</th>
+				<th></th>
+				<th></th>
 			</thead>
 			<tbody>
 				{% if tasks is defined %}
@@ -32,10 +32,11 @@
 							<td>{{ task.dueAt | date('d/m/y H:i:s') }}</td>
 							<td>{{ task.tag.name }}</td>
 							<td>
-								<a href="{{ path('task_update',{"id": task.id}) }}" class="btn btn-success">Modifier</a>
+								<a href="{{ path('task_update',{"id": task.id}) }}" class="btn btn-success">{{'general.button.update' | trans}}
+								</a>
 							</td>
 							<td>
-								<a href="{{ path('task_delete',{"id": task.id}) }}" class="btn btn-danger">Supprimer</a>
+								<a href="{{ path('task_delete',{"id": task.id}) }}" class="btn btn-danger">{{'general.button.delete' | trans}}</a>
 							</td>
 						</tr>
 					{% endfor %}
@@ -43,19 +44,28 @@
 			</tbody>
 		</table>
 	</div>
-
 {% endblock %}
-
 {% block javascripts %}
-
 	<script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
 	<script src="https://cdn.datatables.net/1.11.3/js/jquery.dataTables.min.js"></script>
-
 	<script>
 		$(document).ready(function () {
-$('#tasksTable').DataTable();
+$('#tasksTable').DataTable({
+language: {
+"sLengthMenu": "{% trans from 'messages' %}datables.sLengthMenu  {% endtrans %}",
+"sSearch": "{% trans from 'messages' %}datables.sSearch  {% endtrans %}",
+"sInfo": "{% trans from 'messages' %}datables.sInfo  {% endtrans %}",
+"sInfoEmpty": "Showing 0 to 0 of 0 records",
+"sInfoFiltered": "(filtered from _MAX_ total records)",
+"paginate": {
+"first": "{% trans from 'messages' %}datables.first  {% endtrans %}",
+"previous": "{% trans from 'messages' %}datables.previous  {% endtrans %}",
+"next": "{% trans from 'messages' %}datables.next  {% endtrans %}",
+"last": "{% trans from 'messages' %}datables.last  {% endtrans %}"
+}
+}
+
+});
 });
 	</script>
-
-
 {% endblock %}
