--- a/templates/task/index.html.twig
+++ b/templates/task/index.html.twig
@@ -49,25 +49,27 @@
 
 {% block javascripts %}
 
-<script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
-<script src="https://cdn.datatables.net/1.11.3/js/jquery.dataTables.min.js"></script>
+	<script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
+	<script src="https://cdn.datatables.net/1.11.3/js/jquery.dataTables.min.js"></script>
 
-<script>
-	$(document).ready(function () {
+	<script>
+		$(document).ready(function () {
 $('#tableTasks').DataTable({
 language: {
-"sLengthMenu": "{% trans from 'messages' %}datatables.sLengthMenu  {% endtrans %}",
-"sSearch": "{% trans from 'messages' %}datatables.sSearch {% endtrans %}",
-"sInfo": "{% trans from 'messages' %}datatables.sInfo {% endtrans %}",
+"sLengthMenu": "{% trans from 'messages' %}datatables.sLengthMenu             {% endtrans %}",
+"sSearch": "{% trans from 'messages' %}datatables.sSearch            {% endtrans %}",
+"sInfo": "{% trans from 'messages' %}datatables.sInfo            {% endtrans %}",
 "sInfoEmpty": "Showing 0 to 0 of 0 records",
 "sInfoFiltered": "(filtered from _MAX_ total records)",
 "paginate": {
-"first": "{% trans from 'messages' %}datatables.first {% endtrans %}",
-"previous": "{% trans from 'messages' %}datatables.previous {% endtrans %}",
-"next": "{% trans from 'messages' %}datatables.next {% endtrans %}",
-"last": "{% trans from 'messages' %}datatables.last {% endtrans %}"
+"first": "{% trans from 'messages' %}datatables.first     {% endtrans %}",
+"previous": "{% trans from 'messages' %}datatables.previous     {% endtrans %}",
+"next": "{% trans from 'messages' %}datatables.next     {% endtrans %}",
+"last": "{% trans from 'messages' %}datatables.last     {% endtrans %}"
 }
 }
 });
 });
-</script>
+	</script>
+
+{% endblock %}
