--- a/templates/task/index.html.twig
+++ b/templates/task/index.html.twig
@@ -11,16 +11,19 @@
 {% block body %}
 
 	<div class="container">
+		<a href="{{path('Task_Download')}}" class="btn btn-primary">Download PDF</a><br><br>
 		<a href="{{path('task_create')}}" class="btn btn-primary">{{'general.button.add'|trans}}</a>
 		<table class="table table-striped tabled-bordered" id="tasksTable">
 			<thead>
-				<th>ID</th>
-				<th>{{'general.name'|trans}}</th>
-				<th>{% trans from 'messages'%}general.description{%endtrans%}</th>
-				<th>{% trans from 'messages'%}general.due_date{%endtrans%}</th>
-				<th>{% trans from 'messages'%}general.category{%endtrans%}</th>
-				<th>Update</th>
-				<th>Delete</th>
+				<tr>
+					<th>ID</th>
+					<th>{{'general.name'|trans}}</th>
+					<th>{% trans from 'messages'%}general.description{%endtrans%}</th>
+					<th>{% trans from 'messages'%}general.due_date{%endtrans%}</th>
+					<th>{% trans from 'messages'%}general.category{%endtrans%}</th>
+					<th>Update</th>
+					<th>Delete</th>
+				</tr>
 				{% for label, messages in app.flashes %}
 					{% for message in messages %}{% endfor %}
 				{% endfor %}
@@ -56,16 +59,16 @@
 		$(document).ready(function () {
 $('#tableTasks').DataTable({
 language: {
-"sLengthMenu": "{% trans from 'messages' %}datatables.sLengthMenu  {% endtrans %}",
-"sSearch": "{% trans from 'messages' %}datatables.sSearch  {% endtrans %}",
-"sInfo": "{% trans from 'messages' %}datatables.sInfo  {% endtrans %}",
+"sLengthMenu": "{% trans from 'messages' %}datatables.sLengthMenu         {% endtrans %}",
+"sSearch": "{% trans from 'messages' %}datatables.sSearch         {% endtrans %}",
+"sInfo": "{% trans from 'messages' %}datatables.sInfo         {% endtrans %}",
 "sInfoEmpty": "Showing 0 to 0 of 0 records",
 "sInfoFiltered": "(filtered from _MAX_ total records)",
 "paginate": {
-"first": "{% trans from 'messages' %}datatables.first  {% endtrans %}",
-"previous": "{% trans from 'messages' %}datatables.previous  {% endtrans %}",
-"next": "{% trans from 'messages' %}datatables.next  {% endtrans %}",
-"last": "{% trans from 'messages' %}datatables.last  {% endtrans %}"
+"first": "{% trans from 'messages' %}datatables.first         {% endtrans %}",
+"previous": "{% trans from 'messages' %}datatables.previous         {% endtrans %}",
+"next": "{% trans from 'messages' %}datatables.next         {% endtrans %}",
+"last": "{% trans from 'messages' %}datatables.last         {% endtrans %}"
 }
 }
 });
