--- a/templates/task/index.html.twig
+++ b/templates/task/index.html.twig
@@ -11,6 +11,8 @@
 {% block body %}
 
 	<div class="container">
+
+		<a href="{{path('user_listing')}}" class="btn btn-primary">liste USER</a><br><br>
 		<a href="{{path('task_download')}}" class="btn btn-primary">Download PDF</a><br><br>
 		<a href="{{path('task_create')}}" class="btn btn-primary">{{'general.button.add'|trans}}</a>
 		<table class="table table-striped tabled-bordered" id="tasksTable">
@@ -60,16 +62,16 @@
 		$(document).ready(function () {
 $('#tasksTable').DataTable({
 language: {
-"sLengthMenu": "{% trans from 'messages' %}datatables.sLengthMenu           {% endtrans %}",
-"sSearch": "{% trans from 'messages' %}datatables.sSearch           {% endtrans %}",
-"sInfo": "{% trans from 'messages' %}datatables.sInfo           {% endtrans %}",
+"sLengthMenu": "{% trans from 'messages' %}datatables.sLengthMenu              {% endtrans %}",
+"sSearch": "{% trans from 'messages' %}datatables.sSearch              {% endtrans %}",
+"sInfo": "{% trans from 'messages' %}datatables.sInfo              {% endtrans %}",
 "sInfoEmpty": "Showing 0 to 0 of 0 records",
 "sInfoFiltered": "(filtered from _MAX_ total records)",
 "paginate": {
-"first": "{% trans from 'messages' %}datatables.first           {% endtrans %}",
-"previous": "{% trans from 'messages' %}datatables.previous           {% endtrans %}",
-"next": "{% trans from 'messages' %}datatables.next           {% endtrans %}",
-"last": "{% trans from 'messages' %}datatables.last           {% endtrans %}"
+"first": "{% trans from 'messages' %}datatables.first              {% endtrans %}",
+"previous": "{% trans from 'messages' %}datatables.previous              {% endtrans %}",
+"next": "{% trans from 'messages' %}datatables.next              {% endtrans %}",
+"last": "{% trans from 'messages' %}datatables.last              {% endtrans %}"
 }
 }
 });
