--- a/templates/tag/edit.html.twig
+++ b/templates/tag/edit.html.twig
@@ -1,14 +1,14 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Edit Tag
+{% block title %}
+	{{'tags.utTitle'|trans}}
 {% endblock %}
 
 {% block body %}
-	<h1>Edit Tag</h1>
+	<h1>{{'tags.utTitle'|trans}}</h1>
 
-	{{ include('tag/_form.html.twig', {'button_label': 'Update'}) }}
+	{{ include('tag/_form.html.twig', {'button_label': 'general.button.update'|trans}) }}
 
-	<a href="{{ path('tag_listing') }}">back to list</a>
+	<a href="{{ path('tag_listing') }}">{{'general.button.back_to_list'|trans}}</a>
 
-	{{ include('tag/_delete_form.html.twig') }}
 {% endblock %}
