--- a/templates/tag/index.html.twig
+++ b/templates/tag/index.html.twig
@@ -1,12 +1,13 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Tag index
+{% block title %}
+	{{'tags.lTabTitle'|trans}}
 {% endblock %}
 
 {% block body %}
-	<h1>Tag index</h1>
+	<h1>{{'tags.ltTitle'|trans}}</h1>
 
-	<table class="table">
+	<table class="table table-striped table-bordered">
 		<thead>
 			<tr>
 				<th>Id</th>
@@ -21,13 +22,13 @@
 					<td>{{ tag.id }}</td>
 					<td>{{ tag.name }}</td>
 					<td>
-						<a href="{{path('tag_show',{'id': tag.id})}}" class="btn btn-info mx-auto">{{'general.button.show'|trans}}</a>
-						<a href="{{path('tag_update',{'id': tag.id})}}" class="btn btn-dark mx-auto">{{'general.button.update'|trans}}</a>
+						<a href="{{path('tag_update',{'id': tag.id})}}" class="btn btn-warning mx-auto">{{'general.button.update'|trans}}</a>
+						<a href="{{path('tag_show',{'id': tag.id})}}" class="btn btn-danger mx-auto">{{'general.button.delete'|trans}}</a>
 					</td>
 				</tr>
 			{% else %}
 				<tr>
-					<td colspan="3">no records found</td>
+					<td colspan="3">{{'tags.no_found'|trans}}</td>
 				</tr>
 			{% endfor %}
 		</tbody>
