--- a/templates/tag/show.html.twig
+++ b/templates/tag/show.html.twig
@@ -1,10 +1,11 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Tag
+{% block title %}
+	{{'general.category'|trans}}
 {% endblock %}
 
 {% block body %}
-	<h1>Tag</h1>
+	<h1>{{'general.category'|trans}}</h1>
 
 	<table class="table">
 		<tbody>
@@ -13,15 +14,14 @@
 				<td>{{ tag.id }}</td>
 			</tr>
 			<tr>
-				<th>Name</th>
+				<th>{{'general.name'|trans}}</th>
 				<td>{{ tag.name }}</td>
 			</tr>
 		</tbody>
 	</table>
 
-	<a href="{{ path('tag_listing') }}">back to list</a>
-
-	<a href="{{ path('tag_update', {'id': tag.id}) }}">edit</a>
 
 	{{ include('tag/_delete_form.html.twig') }}
+
+	<a href="{{ path('tag_listing') }}" class="btn btn-secondary mt-2">{{'general.button.back_to_list'|trans}}</a>
 {% endblock %}
