--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -2,12 +2,14 @@
 <html>
 	<head>
 		<meta charset="UTF-8">
+		<meta name="viewport" content="width=device-width, initial-scale=1.0">
+
 		<title>
 			{% block title %}Welcome!
 			{% endblock %}
 		</title>
 		{# Run `composer require symfony/webpack-encore-bundle`}
-																																																           and uncomment the following Encore helpers to start using Symfony UX #}
+																																																		           and uncomment the following Encore helpers to start using Symfony UX #}
 
 		<link rel="stylesheet" href="https://bootswatch.com/5/cerulean/bootstrap.min.css">
 		{% block stylesheets %}
