--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -9,7 +9,7 @@
 			{% endblock %}
 		</title>
 		{# Run `composer require symfony/webpack-encore-bundle`}
-																																																		           and uncomment the following Encore helpers to start using Symfony UX #}
+																																																																																																				           and uncomment the following Encore helpers to start using Symfony UX #}
 
 		<link rel="stylesheet" href="https://bootswatch.com/5/cerulean/bootstrap.min.css">
 		{% block stylesheets %}
@@ -20,16 +20,17 @@
 			{#{{ encore_entry_script_tags('app') }}#}
 		{% endblock %}
 	</head>
-	<body class="text-center">
-		<div>
-			<button>
-				<a class="dropdown-item" href="{{ path(app.request.attributes.get('_route'), app.request.attributes.get('_route_params')|merge({ '_locale': 'en' })) }} ">English</a>
-			</button>
-			<button>
-				<a class="dropdown-item" href="{{ path(app.request.attributes.get('_route'), app.request.attributes.get('_route_params')|merge({ '_locale': 'fr' })) }} ">French</a>
-			</button>
-		</div>
 
+	<div class="text-start">
+		<button>
+			<a href="{{ path(app.request.attributes.get('_route'), app.request.attributes.get('_route_params')|merge({ '_locale': 'en' })) }} "><img src="{{ asset('assets/images/flag_angleterre.png') }}" alt=" english"></a>
+		</button>
+		<button>
+			<a href="{{ path(app.request.attributes.get('_route'), app.request.attributes.get('_route_params')|merge({ '_locale': 'fr' })) }} "><img src="{{ asset('assets/images/flag_france.png') }}" alt="Francais"></a>
+		</button>
+	</div>
+
+	<body class="text-center">
 		{% if is_granted('IS_AUTHENTICATED_FULLY') %}
 			<p>Vous etes connecté en tant que :
 				{{ app.user.email }}
