--- a/templates/user/create.html.twig
+++ b/templates/user/create.html.twig
@@ -2,7 +2,7 @@
 
 {% block title %}
 
-	Créer un gros tâche
+	Créer une tâche
 
 {% endblock %}
 
@@ -19,7 +19,7 @@
 		{{ form_end(form) }}
 		<div>
 			<a href="/fr/user/listing" class="btn btn-primary btn-lg active" role="button" aria-pressed="true">Retour</a>
-			<a href="/fr/login" class="btn btn-warning btn-lg active" role="button" aria-pressed="true">Accueil</a>
+			<a href="/fr/task/listing" class="btn btn-warning btn-lg active" role="button" aria-pressed="true">Accueil</a>
 		</div>
 
 	</div>
