--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -9,7 +9,7 @@
 			{% endblock %}
 		</title>
 		{# Run `composer require symfony/webpack-encore-bundle`}
-																																																																																																				           and uncomment the following Encore helpers to start using Symfony UX #}
+																																																																																																																																																		           and uncomment the following Encore helpers to start using Symfony UX #}
 
 		<link rel="stylesheet" href="https://bootswatch.com/5/cerulean/bootstrap.min.css">
 		{% block stylesheets %}
@@ -32,9 +32,10 @@
 
 	<body class="text-center">
 		{% if is_granted('IS_AUTHENTICATED_FULLY') %}
-			<p>Vous etes connecté en tant que :
+			<a class="btn btn-danger" href="{{ path("app_logout") }}">Logout</a>
+			<p>{{'general.login'|trans}}
+				:
 				{{ app.user.email }}
-				<a href="{{ path("app_logout") }}">Logout</a>
 			</p>
 
 		{% endif %}
