--- a/templates/task/create.html.twig
+++ b/templates/task/create.html.twig
@@ -5,5 +5,6 @@
 		{{ form_start(form) }}
 		{{ form_widget(form) }}
 		{{ form_end(form) }}
+		<a href="{{path('task_listing')}}" class="btn btn-secondary mx-auto">{{'general.button.back_to_list'|trans}}</a>
 	</div>
 {% endblock %}
