--- a/templates/task/index.html.twig
+++ b/templates/task/index.html.twig
@@ -33,9 +33,12 @@
 		{% endfor %}
 
 
-		<div class="d-flex justify-content-between mb-3">
+		<div class="text-start mb-3">
+			<label for="archives">{{'general.lblArchive'|trans}}
+				:
+			</label>
 			<select name="archives" id="selectedValues" onchange='location = this.value;'>
-				<option value="archives" selected>Type d'archivage</option>
+				<option value="" selected></option>
 				<option value="archives_auto">Auto</option>
 				<option value="archives_manual">Manuel</option>
 			</select>
@@ -62,16 +65,16 @@ $('#tasksTable').DataTable({
 ],
 
 language: {
-"sLengthMenu": "{% trans from 'messages' %}datatables.sLengthMenu {% endtrans %}",
-"sSearch": "{% trans from 'messages' %}datatables.sSearch {% endtrans %}",
-"sInfo": "{% trans from 'messages' %}datatables.sInfo {% endtrans %}",
-"sInfoEmpty": "Showing 0 to 0 of 0 records",
+"sLengthMenu": "{% trans from 'messages' %}datatables.sLengthMenu                {% endtrans %}",
+"sSearch": "{% trans from 'messages' %}datatables.sSearch                {% endtrans %}",
+"sInfo": "{% trans from 'messages' %}datatables.sInfo                {% endtrans %}",
+"sInfoEmpty": "{% trans from 'messages' %}datatables.sInfoEmpty                {% endtrans %}",
 "sInfoFiltered": "(filtered from _MAX_ total records)",
 "paginate": {
-"first": "{% trans from 'messages' %}datatables.first {% endtrans %}",
-"previous": "{% trans from 'messages' %}datatables.previous {% endtrans %}",
-"next": "{% trans from 'messages' %}datatables.next {% endtrans %}",
-"last": "{% trans from 'messages' %}datatables.last {% endtrans %}"
+"first": "{% trans from 'messages' %}datatables.first                {% endtrans %}",
+"previous": "{% trans from 'messages' %}datatables.previous                {% endtrans %}",
+"next": "{% trans from 'messages' %}datatables.next                {% endtrans %}",
+"last": "{% trans from 'messages' %}datatables.last                {% endtrans %}"
 }
 }
 });
