--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -9,7 +9,7 @@
 			{% endblock %}
 		</title>
 		{# Run `composer require symfony/webpack-encore-bundle`}
-																																																																																																																																																		           and uncomment the following Encore helpers to start using Symfony UX #}
+																																																																																																																																																																																										           and uncomment the following Encore helpers to start using Symfony UX #}
 
 		<link rel="stylesheet" href="https://bootswatch.com/5/cerulean/bootstrap.min.css">
 		{% block stylesheets %}
@@ -21,25 +21,41 @@
 		{% endblock %}
 	</head>
 
-	<div class="text-start">
-		<button>
-			<a href="{{ path(app.request.attributes.get('_route'), app.request.attributes.get('_route_params')|merge({ '_locale': 'en' })) }} "><img src="{{ asset('assets/images/flag_angleterre.png') }}" alt=" english"></a>
-		</button>
-		<button>
-			<a href="{{ path(app.request.attributes.get('_route'), app.request.attributes.get('_route_params')|merge({ '_locale': 'fr' })) }} "><img src="{{ asset('assets/images/flag_france.png') }}" alt="Francais"></a>
-		</button>
-	</div>
+	<body class="text-center row">
+		<div class="text-start mt-2 col-4">
+			<button>
+				<a href="{{ path(app.request.attributes.get('_route'), app.request.attributes.get('_route_params')|merge({ '_locale': 'en' })) }} "><img src="{{ asset('assets/images/flag_angleterre.png') }}" alt=" english"></a>
+			</button>
+			<button>
+				<a href="{{ path(app.request.attributes.get('_route'), app.request.attributes.get('_route_params')|merge({ '_locale': 'fr' })) }} "><img src="{{ asset('assets/images/flag_france.png') }}" alt="Francais"></a>
+			</button>
+		</div>
 
-	<body class="text-center">
-		{% if is_granted('IS_AUTHENTICATED_FULLY') %}
-			<a class="btn btn-danger" href="{{ path("app_logout") }}">Logout</a>
-			<p>{{'general.login'|trans}}
-				:
-				{{ app.user.email }}
-			</p>
+		<div class="text-center mt-2 col-4">
+			{% if is_granted('IS_AUTHENTICATED_FULLY') %}
+				<p>{{'general.login'|trans}}
+					:
+					<br>
+					{{ app.user.email }}
+				</p>
 
-		{% endif %}
+			{% endif %}
+		</div>
+
+		<div class="text-end mt-2 col-4">
+			{% if is_granted('IS_AUTHENTICATED_FULLY') %}
+				<a class="btn btn-danger" href="{{ path("app_logout") }}">Logout</a>
+			{% endif %}
+		</div>
+
 		{% block body %}{% endblock %}
 	</body>
+
+	<div class="text-end">
+		{% if is_granted('IS_AUTHENTICATED_FULLY') %}
+			<a class="btn btn-danger" href="{{ path("app_logout") }}">Logout</a>
+		{% endif %}
+	</div>
+
 	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 </html>
