--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -5,11 +5,10 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 
 		<title>
-			{% block title %}Welcome!
-			{% endblock %}
+			{% block title %}{% endblock %}
 		</title>
 		{# Run `composer require symfony/webpack-encore-bundle`}
-																																																																																																																																																		           and uncomment the following Encore helpers to start using Symfony UX #}
+																																																																																																																																																								           and uncomment the following Encore helpers to start using Symfony UX #}
 
 		<link rel="stylesheet" href="https://bootswatch.com/5/cerulean/bootstrap.min.css">
 		{% block stylesheets %}
@@ -32,7 +31,7 @@
 
 	<body class="text-center">
 		{% if is_granted('IS_AUTHENTICATED_FULLY') %}
-			<a class="btn btn-danger" href="{{ path("app_logout") }}">Logout</a>
+			<a class="btn btn-danger" href="{{ path("app_logout") }}">{{'general.button.logout'|trans}}</a>
 			<p>{{'general.login'|trans}}
 				:
 				{{ app.user.email }}
