--- a/templates/emails/alert.html.twig
+++ b/templates/emails/alert.html.twig
@@ -11,14 +11,14 @@
 			{{msg|raw}}
 			{{task.dueAt|date("d/m/y")}}</h1>
 		<div class="container" style="text-align :center; margin: auto;">
-			<h2>Le résumé de votre tâche</h2>
+			<h2>{{'general.title.taskmail'|trans}}</h2>
 			<table>
 				<thead>
 					<tr>
-						<th>Nom</th>
-						<th>Description</th>
-						<th>Date effective</th>
-						<th>Catégorie</th>
+						<th>{{'general.name'|trans}}</th>
+						<th>{{'general.description'|trans}}</th>
+						<th>{{'general.due_at'|trans}}</th>
+						<th>{{'general.category'|trans}}</th>
 					</tr>
 				</thead>
 				<tbody>
