--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -1,6 +1,7 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Log in!
+{% block title %}
+	{{'general.title.pageConnect'|trans}}
 {% endblock %}
 
 {% block body %}
@@ -10,38 +11,18 @@
 				<div class="alert alert-danger">{{ error.messageKey|trans(error.messageData, 'security') }}</div>
 			{% endif %}
 
-			{% if app.user %}
-				<div class="mb-3">
-					You are logged in as
-					{{ app.user.username }},
-					<a href="{{ path('app_logout') }}">Logout</a>
-				</div>
-			{% endif %}
-
-			<h1 class="h3 mb-3 font-weight-normal">Please sign in</h1>
-			<label for="inputEmail">Email</label>
+			<h1 class="h3 mb-3 font-weight-normal">{{'general.login.title'|trans}}</h1>
+			<label for="inputEmail">{{'general.login.mail'|trans}}</label>
 			<input type="email" value="{{ last_username }}" name="email" id="inputEmail" class="form-control" autocomplete="email" required autofocus>
-			<label for="inputPassword">Password</label>
+			<label for="inputPassword">{{'general.login.password'|trans}}</label>
 			<input type="password" name="password" id="inputPassword" class="form-control" autocomplete="current-password" required>
 
-			<input
-			type="hidden" name="_csrf_token" value="{{ csrf_token('authenticate') }}">
+			<input type="hidden" name="_csrf_token" value="{{ csrf_token('authenticate') }}">
 
-			{#
-																		        Uncomment this section and add a remember_me option below your firewall to activate remember me functionality.
-																		        See https://symfony.com/doc/current/security/remember_me.html
-																		
-																		        <div class="checkbox mb-3">
-																		            <label>
-																		                <input type="checkbox" name="_remember_me"> Remember me
-																		            </label>
-																		        </div>
-																		    #}
 
-			<button class="btn btn-lg btn-primary" type="submit">
-				Sign in
-			</button><br/>
-			<a href="{{ path('app_forgot_password_request')}}">Mot de passe oublié</a>
+			<button class="btn btn-lg btn-primary" type="submit">{{'general.login.button'|trans}}</button>
+			<br/>
+			<a href="{{ path('app_forgot_password_request')}}">{{'general.login.forgot_password'|trans}}</a>
 		</form>
 	</div>
 {% endblock %}
