--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -11,18 +11,18 @@
 				<div class="alert alert-danger">{{ error.messageKey|trans(error.messageData, 'security') }}</div>
 			{% endif %}
 
-			<h1 class="h3 mb-3 font-weight-normal">{{'general.login.title'|trans}}</h1>
-			<label for="inputEmail">{{'general.login.mail'|trans}}</label>
+			<h1 class="h3 mb-3 font-weight-normal">{{'general.connect.title'|trans}}</h1>
+			<label for="inputEmail">{{'general.connect.mail'|trans}}</label>
 			<input type="email" value="{{ last_username }}" name="email" id="inputEmail" class="form-control" autocomplete="email" required autofocus>
-			<label for="inputPassword">{{'general.login.password'|trans}}</label>
+			<label for="inputPassword">{{'general.connect.password'|trans}}</label>
 			<input type="password" name="password" id="inputPassword" class="form-control" autocomplete="current-password" required>
 
 			<input type="hidden" name="_csrf_token" value="{{ csrf_token('authenticate') }}">
 
 
-			<button class="btn btn-lg btn-primary" type="submit">{{'general.login.button'|trans}}</button>
+			<button class="btn btn-lg btn-primary" type="submit">{{'general.connect.button'|trans}}</button>
 			<br/>
-			<a href="{{ path('app_forgot_password_request')}}">{{'general.login.forgot_password'|trans}}</a>
+			<a href="{{ path('app_forgot_password_request')}}">{{'general.connect.forgot_password'|trans}}</a>
 		</form>
 	</div>
 {% endblock %}
