--- a/templates/task/archives.html.twig
+++ b/templates/task/archives.html.twig
@@ -5,7 +5,8 @@
 	<link rel="stylesheet" href="{{ asset('assets/css/style.css') }}"/>
 {% endblock %}
 
-{% block title %}Liste des tâches archivées
+{% block title %}
+	{{'general.title_list_task_archive'|trans}}
 {% endblock %}
 
 {% block body %}
@@ -79,16 +80,16 @@ $('#tasksTable').DataTable({
 
 
 language : {
-"sLengthMenu": "{% trans from 'messages' %}datatables.sLengthMenu                                              {% endtrans %}",
-"sSearch": "{% trans from 'messages' %}datatables.sSearch                                              {% endtrans %}",
-"sInfo": "{% trans from 'messages' %}datatables.sInfo                                              {% endtrans %}",
+"sLengthMenu": "{% trans from 'messages' %}datatables.sLengthMenu                                               {% endtrans %}",
+"sSearch": "{% trans from 'messages' %}datatables.sSearch                                               {% endtrans %}",
+"sInfo": "{% trans from 'messages' %}datatables.sInfo                                               {% endtrans %}",
 "sInfoEmpty": "Showing 0 to 0 of 0 records",
 "sInfoFiltered": "(filtered from _MAX_ total records)",
 "paginate": {
-"first": "{% trans from 'messages' %}datatables.first                                              {% endtrans %}",
-"previous": "{% trans from 'messages' %}datatables.previous                                              {% endtrans %}",
-"next": "{% trans from 'messages' %}datatables.next                                              {% endtrans %}",
-"last": "{% trans from 'messages' %}datatables.last                                              {% endtrans %}"
+"first": "{% trans from 'messages' %}datatables.first                                               {% endtrans %}",
+"previous": "{% trans from 'messages' %}datatables.previous                                               {% endtrans %}",
+"next": "{% trans from 'messages' %}datatables.next                                               {% endtrans %}",
+"last": "{% trans from 'messages' %}datatables.last                                               {% endtrans %}"
 }
 }
 });
