--- a/templates/user/index.html.twig
+++ b/templates/user/index.html.twig
@@ -7,18 +7,19 @@
 
 {% endblock %}
 
-{% block title %}Liste des utilisateurs
+{% block title %}
+	{{'general.title.userList'|trans}}
 {% endblock %}
 
 {% block body %}
 	<div class="container">
+		<h1>{{'general.title.userList'|trans}}</h1>
+		<a href="{{ path('user_create') }}" class="btn btn-primary">{{'general.button.add'|trans}}</a>
 
-		<a href="{{ path('user_create') }}" class="btn btn-primary">Ajouter</a>
-
-		<table class="table-striped table-bordered" id="usersTable">
+		<table class="table table-striped table-bordered" id="usersTable">
 			<thead>
-				<th>Email</th>
-				<th>Rôle</th>
+				<th>{{'general.user.mail'|trans}}</th>
+				<th>{{'general.user.role'|trans}}</th>
 				<th></th>
 				<th></th>
 			</thead>
@@ -29,10 +30,10 @@
 							<td>{{ user.email }}</td>
 							<td>{{ user.roles |join(', ') }}</td>
 							<td>
-								<a href="{{ path('user_update', {'id': user.id}) }}" class="btn btn-success">Update</a>
+								<a href="{{ path('user_update', {'id': user.id}) }}" class="btn btn-success">{{'general.button.update'|trans}}</a>
 							</td>
 							<td>
-								<a href="{{ path('user_delete', {'id': user.id}) }}" class="btn btn-danger">Delete</a>
+								<a href="{{ path('user_delete', {'id': user.id}) }}" class="btn btn-danger">{{'general.button.delete'|trans}}</a>
 							</td>
 						</tr>
 
@@ -49,10 +50,26 @@
 
 {% block javascripts %}
 	<script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
-	<script src="//cdn.datatables.net/1.11.3/js/jquery.dataTables.min.js"></script>
+	<script src="https://cdn.datatables.net/1.11.3/js/jquery.dataTables.min.js"></script>
+	<script src="https://cdn.datatables.net/plug-ins/1.10.11/sorting/date-eu.js"></script>
 	<script>
 		$(document).ready(function () {
-$('#usersTable').DataTable();
+$('#usersTable').DataTable({
+
+language: {
+"sLengthMenu": "{% trans from 'messages' %}datatables.sLengthMenu                       {% endtrans %}",
+"sSearch": "{% trans from 'messages' %}datatables.sSearch                       {% endtrans %}",
+"sInfo": "{% trans from 'messages' %}datatables.sInfo                       {% endtrans %}",
+"sInfoEmpty": "{% trans from 'messages' %}datatables.sInfoEmpty                       {% endtrans %}",
+"sInfoFiltered": "(filtered from _MAX_ total records)",
+"paginate": {
+"first": "{% trans from 'messages' %}datatables.first                       {% endtrans %}",
+"previous": "{% trans from 'messages' %}datatables.previous                       {% endtrans %}",
+"next": "{% trans from 'messages' %}datatables.next                       {% endtrans %}",
+"last": "{% trans from 'messages' %}datatables.last                       {% endtrans %}"
+}
+}
+});
 });
 	</script>
 {% endblock %}
