modif redirection fonction deleteTask

--- a/templates/PDF/pdfdownload.html.twig
+++ b/templates/PDF/pdfdownload.html.twig
@@ -5,7 +5,7 @@
 			<tr>
 				<th>{{'general.name'|trans}}</th>
 				<th>{{'general.description'|trans}}</th>
-				<th>{{'general.due_at'|trans}}</th>
+				<th>{{'general.due_date'|trans}}</th>
 				<th>{{'general.category'|trans}}</th>
 			</tr>
 		</thead>
